--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
       <title></title>
       <script src = "rps.js"></script>
     </head>
+    <body>
+        <h1>Odin-Bot wants to play rock paper scissors</h1>
+        <input type="button" onclick ="game()" value = "Play 5 rounds of rock paper scissors!">
+    </body>
   </html>
 </DOCTYPE>
