--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
     <head>
       <meta charset="utf8">
       <title></title>
-      <script src = "rps.js"></script>
+      <script src = "rps.js" defer></script>
+      <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin-Bot wants to play rock paper scissors</h1>
-        <input type="button" onclick ="game()" value = "Play 5 rounds of rock paper scissors!">
+        <div class = "choice">
+          <h2>Choices</h2>
+          <div class = "options">
+            <input type="button" class ="rock" value = "rock">
+            <input type="button" class ="paper" value = "paper">
+            <input type="button" class ="scissor" value ="scissor">
+          </div>
+        </div>
+        <div class = "scoreboard">
+          <h2>Score</h2>
+          <div class = "scores"></div>
+        </div>
     </body>
   </html>
 </DOCTYPE>
