Complete Step 3: Render Contents of Gameboard

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <div id="content_container"></div>
     </body>
 </html>
