--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <div id="status_header">Odin Tic-Tac-Toe</div>
         <div id="content_container"></div>
     </body>
 </html>
