--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <div id="status_header">Odin Tic-Tac-Toe</div>
+        <div class="header">
+            Odin Tic-Tac-Toe
+            <div id="status_header"></div>
+        </div>
         <div id="content_container"></div>
     </body>
 </html>
