Add Reset Button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             Odin Tic-Tac-Toe
             <div id="status_header"></div>
         </div>
+        <button type="button" id="reset_game_button">Reset Game</button>
         <div id="content_container"></div>
     </body>
 </html>
