Complete Step 6: Player Name & Cleanup Display

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <body>
         <div class="header">
             Odin Tic-Tac-Toe
+            <div class ="names">
+                <div class="player_1_field">O's Name:
+                    <input type="text" id="player_1_name" placeholder="O">
+                </div>
+                <div class="player_2_field">X's Name:
+                    <input type="text" id="player_2_name" placeholder="X">
+                </div>
+            </div>
             <div id="status_header"></div>
+            <button type="button" id="reset_game_button">Reset Game</button>
         </div>
-        <button type="button" id="reset_game_button">Reset Game</button>
         <div id="content_container"></div>
     </body>
 </html>
