Add Button Toggle to Activate Odin Bot && Fix playing against OdinBot

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             <div class ="names">
                 <div class="player_1_field">O's Name:
                     <input type="text" id="player_1_name" placeholder="O">
+                    <button type="button" id="odin_bot_toggle_o">Odin-Bot</button>
                 </div>
                 <div class="player_2_field">X's Name:
                     <input type="text" id="player_2_name" placeholder="X">
+                    <button type="button" id="odin_bot_toggle_x">Odin-Bot</button>
                 </div>
             </div>
             <div id="status_header"></div>
