--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="./src/styles.css">
+        <script src="./src/script.js" defer></script>
     </head>
     <body>
         <div class="header">
