SET top class component exercise delete & count

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div id="root"></div>
     <!-- <div>Hello World!</div> -->
-    <script type="module" src="/fullstackopen_part1/main.jsx"></script>
+    <!-- <script type="module" src="/fullstackopen_part1/main.jsx"></script> -->
     <!-- <script type="module" src="/fullstackopen_part1_courseinfo/main.jsx"></script> -->
     <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <script type="module" src="/theodinproject__class_component_example/main.jsx"></script>
   </body>
 </html>
