--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-<DOCTYPE! html>
-  <html lang="en">
+<!DOCTYPE HTML>
+<html lang="en">
     <head>
-      <meta charset="utf8">
-      <title></title>
-      <script src = "rps.js" defer></script>
-      <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Odin-Bot wants to play rock paper scissors</h1>
-        <div class = "choice">
-          <h2>Choices</h2>
-          <div class = "options">
-            <input type="button" class ="rock" value = "rock">
-            <input type="button" class ="paper" value = "paper">
-            <input type="button" class ="scissor" value ="scissor">
-          </div>
-        </div>
-        <div class = "scoreboard">
-          <h2>Score</h2>
-          <div class = "scores"></div>
-        </div>
+        <h1>Games</h1>
+        <p><a href="./src/rockPaperScissors.html">Rock Paper Scissors</a></p>
     </body>
-  </html>
-</DOCTYPE>
+</html>
