--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Games</h1>
         <p><a href="./src/rockPaperScissors.html">Rock Paper Scissors</a></p>
+        <p><a href="./src/tictactoe.html">Tic Tac Toe</a></p>
     </body>
 </html>
