SET fix conflicts

--- a/src/tictactoe.html
+++ b/src/tictactoe.html
@@ -1,19 +1,9 @@
-<<<<<<< HEAD
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <h1>Games</h1>
-        <p><a href="./src/rockPaperScissors.html">Rock Paper Scissors</a></p>
-=======
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./src/styles.css">
-        <script src="./src/script.js" defer></script>
+        <link rel="stylesheet" href="../styles/tictactoe.css">
+        <script src="../scripts/tictactoe.js" defer></script>
     </head>
     <body>
         <div class="header">
@@ -32,6 +22,5 @@
             <button type="button" id="reset_game_button">Reset Game</button>
         </div>
         <div id="content_container"></div>
->>>>>>> theodinproject__tic_tac_toe/main
     </body>
 </html>
