--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script type="module" src="/src__fullstackopen_part1/main.jsx"></script> -->
     <!-- <script type="module" src="/src__fullstackopen_part1_courseinfo/main.jsx"></script> -->
     <!-- <script type="module" src="/src__theodinproject__class_component_example/main.jsx"></script> -->
-    <script type="module" src="/src__theodinproject__cv_app/main.jsx"></script>
+    <!-- <script type="module" src="/src__theodinproject__cv_app/main.jsx"></script> -->
+    <script type="module" src="/src__theodinproject__react_router/main.jsx"></script>
   </body>
 </html>
