--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- <script type="module" src="/src__fullstackopen_part1_courseinfo/main.jsx"></script> -->
     <!-- <script type="module" src="/src__theodinproject__class_component_example/main.jsx"></script> -->
     <!-- <script type="module" src="/src__theodinproject__cv_app/main.jsx"></script> -->
-    <script type="module" src="/src__theodinproject__react_router/main.jsx"></script>
+    <!-- <script type="module" src="/src__theodinproject__react_router/main.jsx"></script> -->
+    <!-- <script type="module" src="/src__reactrouter_tutorial/main.jsx"></script> -->
+    <script type="module" src="/src__theodinproject__react_api/main.jsx"></script>
   </body>
 </html>
