--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Index</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- <div>Hello World!</div> -->
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__fullstackopen_part1/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__fullstackopen_part1_courseinfo/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__theodinproject__class_component_example/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__theodinproject__cv_app/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__theodinproject__react_router/main.jsx"></script> -->
-    <!-- <script type="module" src="/src__reactrouter_tutorial/main.jsx"></script> -->
-    <script type="module" src="/src__theodinproject__react_api/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
